--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -51,3 +51,4 @@ File: style.css
 // pages
 @import "themes/pages/authentication";
 @import "themes/pages/icon-lauouts";
+@import "themes/pages/user";
