--- a/src/html/layouts/main.html
+++ b/src/html/layouts/main.html
@@ -73,6 +73,8 @@
 										<li class="bg-transparent mb-2 ms-3"><a target="_blank"
 												href="https://codedthemes.com/item/gradient-able-admin-template/"><span
 													class="badge bg-primary">Upgrade to Pro</span></a></li>
+										<li><a href="user-profile.html" class="dropdown-item"><i
+													class="feather icon-user"></i> Profile</a></li>
 										<li><a href="auth-signin.html" class="dropdown-item"><i
 													class="feather icon-lock"></i> Logout</a></li>
 									</ul>
