--- a/src/html/layouts/menu-list.html
+++ b/src/html/layouts/menu-list.html
@@ -37,6 +37,10 @@
 <li class="nav-item pcoded-menu-caption">
 	<label>Pages</label>
 </li>
+<li class="nav-item">
+	<a href="user-profile.html" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span
+			class="pcoded-mtext">User Profile</span></a>
+</li>
 <li class="nav-item pcoded-hasmenu">
 	<a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span
 			class="pcoded-mtext">Authentication</span></a>
