--- a/src/assets/scss/themes/pages/_user.scss
+++ b/src/assets/scss/themes/pages/_user.scss
@@ -178,89 +178,8 @@
         }
     }
 }
-
-.user-card-2 {
-    .dropdown-toggle{
-        cursor: pointer;
-    }
-    .cover-img-block {
-        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 80%);
-    }
-
-    &.shape-right {
-        .cover-img-block {
-            clip-path: polygon(0 0, 100% 0%, 100% 80%, 0% 100%);
-        }
-    }
-
-    &.shape-center {
-        .cover-img-block {
-            clip-path: polygon(0 0, 100% 0%, 100% 80%, 50% 100%, 0% 80%);
-        }
-    }
-}
-
-.user-card-3 {
-    .dropdown-toggle{
-        cursor: pointer;
-    }
-    .certificated-badge {
-        position: absolute;
-        bottom: 5px;
-        right: 5px;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        background: #fff;
-        padding: 5px 3px;
-
-        .bg-icon {
-            font-size: 30px;
-        }
-
-        .front-icon {
-            font-size: 14px;
-            position: absolute;
-            top: 14px;
-            left: 13px;
-        }
-    }
-
-    .social-top-link {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-    }
-
-    &.social-hover {
-        .social-top-link {
-            top: 20px;
-            left: 20px;
-            overflow: hidden;
-
-            .btn,
-            li {
-                margin-left: -100px;
-                transition: all 0.2s ease-in-out;
-                $i: 1;
-                @while $i<=10 {
-                    &:nth-child(#{$i}) {
-                        transition-delay: $i*0.05s;
-                    }
-                    $i: $i+1;
-                }
-            }
-        }
-
-        &:hover {
-            .social-top-link {
-                .btn,
-                li {
-                    margin-left: 0;
-                }
-            }
-        }
-    }
+.form-group {
+    margin-bottom: 1.3rem;
 }
 // [ user card widget ] end
 // [ user profile page ] start
@@ -348,92 +267,4 @@
     }
 }
 // [ user profile page ] end
-// [ user list page ] start
-
-.user-profile-list {
-    background: transparent;
-    box-shadow: none;
-    &:hover{
-        box-shadow: none;
-    }
-    table {
-        border-spacing: 0 10px;
-        width: calc(100% - 10px);
-        margin: 0 5px;
-        border-collapse: separate;
-
-        tbody {
-            tr {
-                box-shadow: $card-shadow;
-                border-radius: $border-radius;
-                position: relative;
-
-                .overlay-edit {
-                    position: absolute;
-                    opacity: 0;
-                    top: 0;
-                    right: 0;
-                    background: $primary-color;
-                    bottom: 0;
-                    left: 0;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    .btn {
-                        border-radius: 50%;
-                        margin: 0 3px;
-                        width: 35px;
-                        height: 35px;
-                        display: inline-flex;
-                        align-items: center;
-                        justify-content: center;
-                    }
-                }
-
-                &:hover {
-                    box-shadow: 0 0 6px 0 $primary-color;
-
-                    td {
-                        cursor: pointer;
-                        color: #fff;
-                        background: $primary-color;
-
-                        h6 {
-                            color: #fff;
-                        }
-
-                        .overlay-edit {
-                            opacity: 1;
-                        }
-                    }
-                }
-            }
-        }
-
-        tr {
-            td,
-            th {
-                vertical-align: middle;
-                border: none;
-            }
-
-            td {
-                background: #fff;
-                position: relative;
-
-                &:first-child {
-                    border-top-left-radius: $border-radius;
-                    border-bottom-left-radius: $border-radius;
-                }
-
-                &:last-child {
-                    border-top-right-radius: $border-radius;
-                    border-bottom-right-radius: $border-radius;
-                }
-            }
-        }
-    }
-}
-// [ user list page ] end
 /**====== user card css end ======**/
