--- a/angular/src/app/demo/ui-element/button/button.component.html
+++ b/angular/src/app/demo/ui-element/button/button.component.html
@@ -39,7 +39,8 @@
     <app-card cardTitle="Link" [options]="false">
       <div class="d-flex flex-wrap gap-2">
         <a class="btn btn-primary" role="button" href="javascript:">Primary link</a>
-        <a class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true" href="javascript:">Disabled Primary link</a>
+        <a class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true" href="javascript:">Disabled
+          Primary link</a>
         <a class="btn btn-link-success" role="button" href="javascript:">Light Success link</a>
       </div>
     </app-card>
@@ -126,7 +127,8 @@
         <button type="button" class="btn btn-secondary"> <i class="feather icon-camera me-1"></i>Secondary </button>
         <button type="button" class="btn btn-success"> <i class="feather icon-check-circle me-1"></i>Success </button>
         <button type="button" class="btn btn-danger"> <i class="feather icon-slash me-1"></i>Danger </button>
-        <button type="button" class="btn btn-warning text-dark"> <i class="feather icon-alert-triangle me-1"></i>Warning </button>
+        <button type="button" class="btn btn-warning text-dark"> <i class="feather icon-alert-triangle me-1"></i>Warning
+        </button>
         <button type="button" class="btn btn-info"> <i class="feather icon-info me-1"></i>Info </button>
       </div>
     </app-card>
@@ -136,11 +138,15 @@
   <div class="col-md-6">
     <app-card cardTitle="Outline Icon BUttons" [options]="false">
       <div class="d-flex flex-wrap gap-2">
-        <button type="button" class="btn btn-outline-primary"> <i class="feather icon-thumbs-up me-1"></i>Primary </button>
-        <button type="button" class="btn btn-outline-secondary"> <i class="feather icon-camera me-1"></i>Secondary </button>
-        <button type="button" class="btn btn-outline-success"> <i class="feather icon-check-circle me-1"></i>Success </button>
+        <button type="button" class="btn btn-outline-primary"> <i class="feather icon-thumbs-up me-1"></i>Primary
+        </button>
+        <button type="button" class="btn btn-outline-secondary"> <i class="feather icon-camera me-1"></i>Secondary
+        </button>
+        <button type="button" class="btn btn-outline-success"> <i class="feather icon-check-circle me-1"></i>Success
+        </button>
         <button type="button" class="btn btn-outline-danger"> <i class="feather icon-slash me-1"></i>Danger </button>
-        <button type="button" class="btn btn-outline-warning"> <i class="feather icon-alert-triangle me-1"></i>Warning </button>
+        <button type="button" class="btn btn-outline-warning"> <i class="feather icon-alert-triangle me-1"></i>Warning
+        </button>
         <button type="button" class="btn btn-outline-info"> <i class="feather icon-info me-1"></i>Info </button>
       </div>
     </app-card>
@@ -245,14 +251,9 @@
             <button type="button" class="btn btn-light-secondary">4</button>
           </div>
           <div class="input-group mb-2">
-            <div class="input-group-text" id="btnGroupAddon">@</div>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Input group example"
-              aria-label="Input group example"
-              aria-describedby="btnGroupAddon"
-            />
+            <div class="input-group-text" id="btnGroupAddon">&#64;</div>
+            <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example"
+              aria-describedby="btnGroupAddon" />
           </div>
         </div>
 
@@ -264,14 +265,9 @@
             <button type="button" class="btn btn-light-secondary">4</button>
           </div>
           <div class="input-group">
-            <div class="input-group-text" id="btnGroupAddon2">@</div>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Input group example"
-              aria-label="Input group example"
-              aria-describedby="btnGroupAddon2"
-            />
+            <div class="input-group-text" id="btnGroupAddon2">&#64;</div>
+            <input type="text" class="form-control" placeholder="Input group example" aria-label="Input group example"
+              aria-describedby="btnGroupAddon2" />
           </div>
         </div>
       </div>
@@ -346,7 +342,8 @@
             <button type="button" class="btn m-0 btn-secondary">2</button>
             <div class="btn-group" role="group">
               <div ngbDropdown>
-                <button type="button" class="btn m-0 btn-secondary dropdown-toggle" ngbDropdownToggle> Dropdown </button>
+                <button type="button" class="btn m-0 btn-secondary dropdown-toggle" ngbDropdownToggle> Dropdown
+                </button>
                 <div class="dropdown-menu" ngbDropdownMenu>
                   <a class="dropdown-item" href="javascript:">Dropdown link</a>
                   <a class="dropdown-item" href="javascript:">Dropdown link</a>
