--- a/angular/src/app/theme/layout/admin/nav-bar/nav-left/nav-search/nav-search.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-left/nav-search/nav-search.component.html
@@ -1,5 +1,7 @@
 <a href="javascript:" (click)="this.searchOn = true" class="pop-search" title="Search"><i class="feather icon-search"></i></a>
-<div class="search-bar" *ngIf="searchOn">
-  <input type="text" class="form-control border-0 shadow-none" placeholder="Search here" />
-  <button (click)="this.searchOn = false" type="button" class="btn-close close" aria-label="Close"></button>
-</div>
+@if (searchOn) {
+  <div class="search-bar">
+    <input type="text" class="form-control border-0 shadow-none" placeholder="Search here" />
+    <button (click)="this.searchOn = false" type="button" class="btn-close close" aria-label="Close"></button>
+  </div>
+}
