--- a/angular/src/app/theme/layout/admin/nav-bar/nav-right/chat-user-list/chat-user-list.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-right/chat-user-list/chat-user-list.component.html
@@ -8,9 +8,9 @@
   <div class="main-friend-cont scroll-div">
     <div class="main-friend-list">
       <ng-scrollbar style="height: calc(100vh - 85px)" visibility="hover">
-        <ng-container *ngFor="let friends of friendsList">
+        @for (friends of friendsList; track friends) {
           <app-friend (ChatOn)="ChatOn()" [friends]="friends"></app-friend>
-        </ng-container>
+        }
       </ng-scrollbar>
     </div>
   </div>
