--- a/angular/src/app/demo/dashboard/dash-analytics/product-sale/product-sale.component.html
+++ b/angular/src/app/demo/dashboard/dash-analytics/product-sale/product-sale.component.html
@@ -2,77 +2,93 @@
   <table class="table table-hover m-b-0 mt-3">
     <thead>
       <tr>
-        <th *ngFor="let sale of product_sale">
-          <span>
-            {{ sale.title }}
-            <a class="help"><i class="feather {{ sale.icon }}  f-16"></i></a>
-          </span>
-        </th>
+        @for (sale of product_sale; track sale) {
+          <th>
+            <span>
+              {{ sale.title }}
+              <a class="help"><i class="feather {{ sale.icon }}  f-16"></i></a>
+            </span>
+          </th>
+        }
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>08-11-2016</td>
-        <td *ngFor="let progress of progressBar"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
       <tr>
         <td>15-10-2016</td>
-        <td *ngFor="let progress of progressBar2"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar2; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
       <tr>
         <td>08-08-2017</td>
-        <td *ngFor="let progress of progressBar3"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar3; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
       <tr>
         <td>11-12-2017</td>
-        <td *ngFor="let progress of progressBar4"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar4; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
       <tr>
         <td>05-06-2015</td>
-        <td *ngFor="let progress of progressBar5"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar5; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
       <tr>
         <td>08-11-2016</td>
-        <td *ngFor="let progress of progressBar6"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar6; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
       <tr>
         <td>15-10-2016</td>
-        <td *ngFor="let progress of progressBar7"
-          >{{ progress.value }}
-          <div class="mt-1">
-            <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
-          </div>
-        </td>
+        @for (progress of progressBar7; track progress) {
+          <td
+            >{{ progress.value }}
+            <div class="mt-1">
+              <ngb-progressbar type="{{ progress.color }}" height="4px" [value]="progress.percentage"></ngb-progressbar>
+            </div>
+          </td>
+        }
       </tr>
     </tbody>
   </table>
