--- a/angular/src/app/demo/forms & tables/form-elements/form-elements.component.html
+++ b/angular/src/app/demo/forms & tables/form-elements/form-elements.component.html
@@ -8,7 +8,8 @@
           <form action="javascript:">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" />
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email" />
               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
@@ -80,13 +81,8 @@
             <div class="form-group">
               <div class="form-group">
                 <label for="exampleColorInput" class="form-label"></label>
-                <input
-                  type="color"
-                  class="form-control form-control-color"
-                  id="exampleColorInput"
-                  value="#563d7c"
-                  title="Choose your color"
-                />
+                <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c"
+                  title="Choose your color" />
               </div>
             </div>
           </form>
@@ -137,7 +133,7 @@
         <div class="col-12">
           <label for="inlineFormInputGroupUsername" class="sr-only">Username</label>
           <div class="input-group">
-            <div class="input-group-text">@</div>
+            <div class="input-group-text">&#64;</div>
             <input type="text" readonly class="form-control" id="inlineFormInputGroupUsername" placeholder="Username" />
           </div>
         </div>
@@ -226,7 +222,8 @@
                 <label for="inputPassword3" class="col-sm-3 col-form-label">Radios</label>
                 <div class="col-sm-9">
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked />
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1"
+                      checked />
                     <label class="form-check-label" for="gridRadios1">First radio</label>
                   </div>
                   <div class="form-check">
@@ -234,7 +231,8 @@
                     <label class="form-check-label" for="gridRadios2">Second radio</label>
                   </div>
                   <div class="form-check disabled">
-                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled />
+                    <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3"
+                      disabled />
                     <label class="form-check-label" for="gridRadios3">Third disabled radio</label>
                   </div>
                 </div>
@@ -263,7 +261,8 @@
             <div class="form-group row">
               <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Email</label>
               <div class="col-sm-9">
-                <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm" />
+                <input type="email" class="form-control form-control-sm" id="colFormLabelSm"
+                  placeholder="col-form-label-sm" />
               </div>
             </div>
             <div class="form-group row">
@@ -275,7 +274,8 @@
             <div class="form-group row">
               <label for="colFormLabelLg" class="col-sm-3 col-form-label col-form-label-lg">Email</label>
               <div class="col-sm-9">
-                <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg" />
+                <input type="email" class="form-control form-control-lg" id="colFormLabelLg"
+                  placeholder="col-form-label-lg" />
               </div>
             </div>
           </form>
@@ -285,10 +285,9 @@
       <hr />
       <label for="inputPassword5">Password</label>
       <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" />
-      <small id="passwordHelpBlock" class="form-text text-muted"
-        >Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or
-        emoji.</small
-      >
+      <small id="passwordHelpBlock" class="form-text text-muted">Your password must be 8-20 characters long, contain
+        letters and numbers, and must not contain spaces, special characters, or
+        emoji.</small>
       <form action="javascript:" class="form-inline">
         <div class="form-group mt-3">
           <label for="inputPassword6">Password</label>
@@ -302,28 +301,24 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <label for="validationCustom01">First name</label>
-            <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required />
+            <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark"
+              required />
             <div class="valid-feedback">Looks good!</div>
           </div>
           <div class="col-md-4 mb-3">
             <label for="validationCustom02">Last name</label>
-            <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required />
+            <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto"
+              required />
             <div class="valid-feedback">Looks good!</div>
           </div>
           <div class="col-md-4 mb-3">
             <label for="validationTooltipUsername">Username</label>
             <div class="input-group">
               <!-- <div class="input-group-prepend"> -->
-              <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
+              <span class="input-group-text" id="validationTooltipUsernamePrepend">&#64;</span>
               <!-- </div> -->
-              <input
-                type="text"
-                class="form-control"
-                id="validationTooltipUsername"
-                placeholder="Username"
-                aria-describedby="validationTooltipUsernamePrepend"
-                required
-              />
+              <input type="text" class="form-control" id="validationTooltipUsername" placeholder="Username"
+                aria-describedby="validationTooltipUsernamePrepend" required />
               <div class="invalid-feedback">Please choose a username.</div>
             </div>
           </div>
@@ -359,7 +354,8 @@
       <form action="javascript:" class="was-validated">
         <div class="mb-3">
           <label for="validationTextarea" class="form-label">Textarea</label>
-          <textarea class="form-control is-invalid" required id="validationTextarea" placeholder="Required example textarea"></textarea>
+          <textarea class="form-control is-invalid" required id="validationTextarea"
+            placeholder="Required example textarea"></textarea>
           <div class="invalid-feedback"> Please enter a message in the textarea. </div>
         </div>
         <div class="custom-control custom-checkbox mb-3">
@@ -369,11 +365,13 @@
         </div>
 
         <div class="custom-control custom-radio">
-          <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required />
+          <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked"
+            required />
           <label class="custom-control-label ps-2" for="customControlValidation2">Toggle this radio</label>
         </div>
         <div class="custom-control custom-radio mb-3">
-          <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required />
+          <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked"
+            required />
           <label class="custom-control-label ps-2" for="customControlValidation3">Or toggle this other radio</label>
           <div class="invalid-feedback">More example invalid feedback text</div>
         </div>
@@ -402,27 +400,23 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <label for="validationTooltip01">First name</label>
-            <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" value="Mark" required />
+            <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" value="Mark"
+              required />
             <div class="valid-tooltip">Looks good!</div>
           </div>
           <div class="col-md-4 mb-3">
             <label for="validationTooltip02">Last name</label>
-            <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="Otto" required />
+            <input type="text" class="form-control" id="validationTooltip02" placeholder="Last name" value="Otto"
+              required />
             <div class="valid-tooltip">Looks good!</div>
           </div>
           <div class="col-md-4 mb-3">
             <label for="validationTooltipUsername">Username</label>
             <div class="input-group">
               <div class="input-group">
-                <span class="input-group-text" id="validationTooltipUsernamePrepend">@</span>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="validationTooltipUsername"
-                  placeholder="Username"
-                  aria-describedby="validationTooltipUsernamePrepend"
-                  required
-                />
+                <span class="input-group-text" id="validationTooltipUsernamePrepend">&#64;</span>
+                <input type="text" class="form-control" id="validationTooltipUsername" placeholder="Username"
+                  aria-describedby="validationTooltipUsernamePrepend" required />
               </div>
               <div class="invalid-tooltip"> Please choose a unique and valid username. </div>
             </div>
@@ -493,18 +487,14 @@
   <div class="col-sm-12">
     <app-card cardTitle="Input Group" [options]="false">
       <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">@</span>
-        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" />
+        <span class="input-group-text" id="basic-addon1">&#64;</span>
+        <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+          aria-describedby="basic-addon1" />
       </div>
       <div class="input-group mb-3">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Recipient's username"
-          aria-label="Recipient's username"
-          aria-describedby="basic-addon2"
-        />
-        <span class="input-group-text" id="basic-addon2">@example.com</span>
+        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+          aria-describedby="basic-addon2" />
+        <span class="input-group-text" id="basic-addon2">&#64;example.com</span>
       </div>
       <label for="basic-url" class="form-label">Your vanity URL</label>
       <div class="input-group mb-3">
@@ -526,15 +516,18 @@
           <hr />
           <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Small</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" />
+            <input type="text" class="form-control" aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-sm" />
           </div>
           <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" />
+            <input type="text" class="form-control" aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default" />
           </div>
           <div class="input-group input-group-lg">
             <span class="input-group-text" id="inputGroup-sizing-lg">Large</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" />
+            <input type="text" class="form-control" aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-lg" />
           </div>
         </div>
         <div class="col-md-6">
@@ -542,13 +535,15 @@
           <hr />
           <div class="input-group mb-3">
             <div class="input-group-text">
-              <input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for following text input" />
+              <input class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input" />
             </div>
             <input type="text" class="form-control" aria-label="Text input with checkbox" />
           </div>
           <div class="input-group">
             <div class="input-group-text">
-              <input class="form-check-input mt-0" type="radio" value="" aria-label="Radio button for following text input" />
+              <input class="form-check-input mt-0" type="radio" value=""
+                aria-label="Radio button for following text input" />
             </div>
             <input type="text" class="form-control" aria-label="Text input with radio button" />
           </div>
@@ -584,23 +579,13 @@
         <div class="col-md-6">
           <div class="input-group mb-3">
             <button class="btn btn-primary" type="button" id="button-addon1"> Button </button>
-            <input
-              type="text"
-              class="form-control"
-              placeholder=""
-              aria-label="Example text with button addon"
-              aria-describedby="button-addon1"
-            />
+            <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon"
+              aria-describedby="button-addon1" />
           </div>
 
           <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Recipient's username"
-              aria-label="Recipient's username"
-              aria-describedby="button-addon2"
-            />
+            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+              aria-describedby="button-addon2" />
             <button class="btn btn-primary" type="button" id="button-addon2"> Button </button>
           </div>
         </div>
@@ -611,12 +596,8 @@
             <input type="text" class="form-control" placeholder="" aria-label="Example text with two button addons" />
           </div>
           <div class="input-group">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Recipient's username"
-              aria-label="Recipient's username with two button addons"
-            />
+            <input type="text" class="form-control" placeholder="Recipient's username"
+              aria-label="Recipient's username with two button addons" />
             <button class="btn btn-primary" type="button">Button</button>
             <button class="btn btn-secondary" type="button">Button</button>
           </div>
@@ -743,10 +724,12 @@
           </div>
           <div class="input-group mb-3">
             <button class="btn btn-primary" id="inputGroupFileAddon03" type="button"> Button </button>
-            <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload" />
+            <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03"
+              aria-label="Upload" />
           </div>
           <div class="input-group">
-            <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload" />
+            <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03"
+              aria-label="Upload" />
             <button class="btn btn-primary" id="inputGroupFileAddon03" type="button"> Button </button>
           </div>
         </div>
