--- a/angular/src/app/demo/forms & tables/tbl-bootstrap/tbl-bootstrap.component.html
+++ b/angular/src/app/demo/forms & tables/tbl-bootstrap/tbl-bootstrap.component.html
@@ -16,19 +16,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -52,19 +52,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -88,19 +88,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -124,19 +124,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -160,55 +160,55 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr class="table-success">
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr>
               <th scope="row">4</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr class="table-warning">
               <th scope="row">5</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr>
               <th scope="row">6</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr class="table-danger">
               <th scope="row">7</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr>
               <th scope="row">8</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr class="table-info">
               <th scope="row">9</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -232,55 +232,55 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr class="bg-success">
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr>
               <th scope="row">4</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr class="bg-warning">
               <th scope="row">5</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr>
               <th scope="row">6</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr class="bg-danger">
               <th scope="row">7</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr>
               <th scope="row">8</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
             <tr class="bg-info">
               <th scope="row">9</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -304,19 +304,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -340,19 +340,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -376,19 +376,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
@@ -412,19 +412,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
           <tfoot class="table-info">
@@ -432,7 +432,7 @@
               <th scope="row">#</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tfoot>
         </table>
@@ -456,19 +456,19 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
+              <td>&#64;mdo</td>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
               <td>Thornton</td>
-              <td>@fat</td>
+              <td>&#64;fat</td>
             </tr>
             <tr>
               <th scope="row">3</th>
               <td>Larry</td>
               <td>the Bird</td>
-              <td>@twitter</td>
+              <td>&#64;twitter</td>
             </tr>
           </tbody>
         </table>
