--- a/angular/src/app/demo/ui-element/collapse/collapse.component.html
+++ b/angular/src/app/demo/ui-element/collapse/collapse.component.html
@@ -2,24 +2,14 @@
   <!-- [ basic-collapse ] start -->
   <div class="col-sm-12">
     <app-card cardTitle="Basic Collapse" [options]="false">
-      <a
-        class="btn btn-primary text-white me-2 mb-2"
-        (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed"
-        aria-controls="collapseExample"
-        >Link with href</a
-      >
-      <button
-        class="btn btn-primary mb-2"
-        type="button"
-        (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed"
-        aria-controls="collapseExample"
-        >Button with data-target</button
-      >
+      <a class="btn btn-primary text-white me-2 mb-2" (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">Link with href</a>
+      <button class="btn btn-primary mb-2" type="button" (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">Button with data-target</button>
       <div id="collapseExample" [ngbCollapse]="isCollapsed">
         <p class="mt-3">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica,
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
+          keffiyeh helvetica,
           craft beer labore wes anderson cred nesciunt sapiente ea proident.
         </p>
       </div>
@@ -30,28 +20,15 @@
   <div class="col-sm-12 mb-3">
     <h5 class="mb-3">Multiple Targets</h5>
     <hr />
-    <a
-      class="btn btn-primary text-white me-2 mb-2"
-      (click)="isMultiCollapsed1 = !isMultiCollapsed1"
-      [attr.aria-expanded]="!isMultiCollapsed1"
-      aria-controls="multiCollapseExample1"
-      >Toggle first element</a
-    >
-    <button
-      class="btn btn-primary me-2 mb-2"
-      (click)="isMultiCollapsed2 = !isMultiCollapsed2"
-      [attr.aria-expanded]="!isMultiCollapsed2"
-      type="button"
-      aria-controls="multiCollapseExample2"
-    >
+    <a class="btn btn-primary text-white me-2 mb-2" (click)="isMultiCollapsed1 = !isMultiCollapsed1"
+      [attr.aria-expanded]="!isMultiCollapsed1" aria-controls="multiCollapseExample1">Toggle first element</a>
+    <button class="btn btn-primary me-2 mb-2" (click)="isMultiCollapsed2 = !isMultiCollapsed2"
+      [attr.aria-expanded]="!isMultiCollapsed2" type="button" aria-controls="multiCollapseExample2">
       Toggle second element
     </button>
-    <button
-      class="btn btn-primary mb-2"
-      type="button"
+    <button class="btn btn-primary mb-2" type="button"
       (click)="isMultiCollapsed1 = !isMultiCollapsed1; isMultiCollapsed2 = !isMultiCollapsed2"
-      aria-controls="multiCollapseExample1 multiCollapseExample2"
-    >
+      aria-controls="multiCollapseExample1 multiCollapseExample2">
       Toggle both elements
     </button>
     <div class="row">
@@ -60,7 +37,8 @@
           <div class="card">
             <div class="card-body">
               <p class="mb-0">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil
+                anim keffiyeh
                 helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
               </p>
             </div>
@@ -72,7 +50,8 @@
           <div class="card">
             <div class="card-body">
               <p class="mb-0">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil
+                anim keffiyeh
                 helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
               </p>
             </div>
@@ -84,94 +63,109 @@
   <!-- [ multiple-collapse ] end -->
   <!-- [ accordion-collapse ] start -->
   <div class="col-sm-12">
-    <div class="card">
-      <div class="card-header">
-        <h5>Accordion</h5>
+    <app-card cardTitle="Accordion" blockClass="pt-0">
+      <div ngbAccordion>
+        <div ngbAccordionItem [collapsed]="false">
+          <h2 ngbAccordionHeader>
+            <button ngbAccordionButton>Simple</button>
+          </h2>
+          <div ngbAccordionCollapse>
+            <div ngbAccordionBody>
+              <ng-template>
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </ng-template>
+            </div>
+          </div>
+        </div>
+        <div ngbAccordionItem>
+          <h2 ngbAccordionHeader>
+            <button ngbAccordionButton>
+              <span>&#9733; <b>Fancy</b> title &#9733;</span>
+            </button>
+          </h2>
+          <div ngbAccordionCollapse>
+            <div ngbAccordionBody>
+              <ng-template>
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </ng-template>
+            </div>
+          </div>
+        </div>
+        <div ngbAccordionItem [disabled]="true">
+          <h2 ngbAccordionHeader>
+            <button ngbAccordionButton>Disabled</button>
+          </h2>
+          <div ngbAccordionCollapse>
+            <div ngbAccordionBody>
+              <ng-template>
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </ng-template>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card-body">
-        <ngb-accordion [closeOthers]="true">
-          <ngb-panel id="static-1">
-            <ng-template ngbPanelTitle>
-              <a href="javascript:">Accordion Item #1</a>
-            </ng-template>
-            <ng-template ngbPanelContent>
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non
-              cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-              bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-              anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-              raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </ng-template>
-          </ngb-panel>
-          <ngb-panel id="static-2">
-            <ng-template ngbPanelTitle>
-              <a href="javascript:">Accordion Item #2</a>
-            </ng-template>
-            <ng-template ngbPanelContent>
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non
-              cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-              bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-              anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-              raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </ng-template>
-          </ngb-panel>
-          <ngb-panel id="static-3">
-            <ng-template ngbPanelTitle>
-              <a href="javascript:">Collapsible Group Item #3</a>
-            </ng-template>
-            <ng-template ngbPanelContent>
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non
-              cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-              bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-              anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-              raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </ng-template>
-          </ngb-panel>
-        </ngb-accordion>
-      </div>
-    </div>
+    </app-card>
 
     <h5 class="mt-4 mb-3">Accordion Flush</h5>
     <hr />
     <div class="card">
       <div class="card-body">
-        <ngb-accordion [closeOthers]="true" activeIds="static-2">
-          <ngb-panel id="static-1">
-            <ng-template ngbPanelTitle>
-              <a href="javascript:">Accordion Item #1</a>
-            </ng-template>
-            <ng-template ngbPanelContent>
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non
-              cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-              bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-              anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-              raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </ng-template>
-          </ngb-panel>
-          <ngb-panel id="static-2">
-            <ng-template ngbPanelTitle>
-              <a href="javascript:">Accordion Item #2</a>
-            </ng-template>
-            <ng-template ngbPanelContent>
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non
-              cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-              bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-              anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-              raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </ng-template>
-          </ngb-panel>
-          <ngb-panel id="static-3">
-            <ng-template ngbPanelTitle>
-              <a href="javascript:">Accordion Item #3</a>
-            </ng-template>
-            <ng-template ngbPanelContent>
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non
-              cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
-              bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes
-              anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
-              raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-            </ng-template>
-          </ngb-panel>
-        </ngb-accordion>
+        <div ngbAccordion [closeOthers]="true">
+          @for (item of items; track item) {
+          <div ngbAccordionItem [collapsed]="item !== 'First'">
+            <h2 ngbAccordionHeader>
+              <button ngbAccordionButton>{{ item }}</button>
+            </h2>
+            <div ngbAccordionCollapse>
+              <div ngbAccordionBody>
+                <ng-template>
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                  moon
+                  officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
+                  Brunch 3
+                  wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
+                  et.
+                  Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad
+                  vegan
+                  excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
+                  nesciunt
+                  you probably haven't heard of them accusamus labore sustainable VHS.
+                </ng-template>
+              </div>
+            </div>
+          </div>
+          }
+        </div>
       </div>
     </div>
   </div>
