--- a/angular/src/app/theme/layout/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-right/chat-user-list/friend/friend.component.html
@@ -4,17 +4,21 @@
   [attr.data-id]="friends.id"
   [attr.data-status]="{ online: friends.status, offline: !friends.status }"
   [attr.data-username]="friends.name"
->
+  >
   <a class="media-left" href="javascript:"
     ><img class="media-object img-radius" src="{{ friends.photo }}" alt="{{ friends.name }}" />
-    <div class="live-status" *ngIf="friends.new">{{ friends.new }}</div></a
-  >
-  <div class="media-body">
-    <h6 class="chat-header">
-      {{ friends.name
-      }}<small class="d-block" *ngIf="friends.time" [ngClass]="{ 'text-c-green': friends.status, 'text-c-red': !friends.status }">{{
-        friends.time
-      }}</small>
-    </h6>
+    @if (friends.new) {
+      <div class="live-status">{{ friends.new }}</div>
+      }</a
+      >
+      <div class="media-body">
+        <h6 class="chat-header">
+          {{ friends.name
+          }}@if (friends.time) {
+          <small class="d-block" [ngClass]="{ 'text-c-green': friends.status, 'text-c-red': !friends.status }">{{
+            friends.time
+          }}</small>
+        }
+      </h6>
+    </div>
   </div>
-</div>
