--- a/angular/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
+++ b/angular/src/app/theme/layout/admin/nav-bar/nav-right/nav-right.component.html
@@ -22,109 +22,115 @@
               <div class="media-body">
                 <p
                   ><strong>John Doe</strong><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
-                >
-                <p>New ticket Added</p>
+                  >
+                  <p>New ticket Added</p>
+                </div>
+              </div>
+            </li>
+            <li class="n-title">
+              <p class="m-b-0">EARLIER</p>
+            </li>
+            <li class="notification">
+              <div class="media">
+                <img class="img-radius" src="assets/images/user/avatar-2.jpg" alt="Generic placeholder image" />
+                <div class="media-body">
+                  <p
+                    ><strong>Joseph William</strong
+                    ><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
+                    >
+                    <p>Purchase New Theme and make payment</p>
+                  </div>
+                </div>
+              </li>
+              <li class="notification">
+                <div class="media">
+                  <img class="img-radius" src="assets/images/user/avatar-3.jpg" alt="Generic placeholder image" />
+                  <div class="media-body">
+                    <p
+                      ><strong>Sara Soudein</strong
+                      ><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
+                      >
+                      <p>currently login</p>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+              <div class="noti-footer">
+                <a href="javascript:">show all</a>
               </div>
             </div>
-          </li>
-          <li class="n-title">
-            <p class="m-b-0">EARLIER</p>
-          </li>
-          <li class="notification">
-            <div class="media">
-              <img class="img-radius" src="assets/images/user/avatar-2.jpg" alt="Generic placeholder image" />
-              <div class="media-body">
-                <p
-                  ><strong>Joseph William</strong
-                  ><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
-                >
-                <p>Purchase New Theme and make payment</p>
+          </div>
+        </li>
+        <li (click)="this.visibleUserList = !this.visibleUserList">
+          <div class="dropdown">
+            <a href="javascript:" class="displayChatbox dropdown-toggle">
+              <i class="icon feather icon-mail" title="Mail InBox"></i><span class="badge bg-success"><span class="sr-only"></span></span>
+            </a>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown drp-user" ngbDropdown placement="auto">
+            <a href="javascript:" ngbDropdownToggle>
+              <img src="assets/images/user/avatar-1.jpg" class="img-radius wid-40" alt="User-Profile-Image" />
+            </a>
+            <div class="dropdown-menu dropdown-menu-end profile-notification" ngbDropdownMenu>
+              <div class="pro-head">
+                <img src="assets/images/user/avatar-1.jpg" class="img-radius" alt="User-Profile-Image" />
+                <span>John Doe</span>
+                <a href="javascript:" class="dud-logout" title="Logout">
+                  <i class="feather icon-log-out"></i>
+                </a>
               </div>
-            </div>
-          </li>
-          <li class="notification">
-            <div class="media">
-              <img class="img-radius" src="assets/images/user/avatar-3.jpg" alt="Generic placeholder image" />
-              <div class="media-body">
-                <p
-                  ><strong>Sara Soudein</strong
-                  ><span class="n-time text-muted"><i class="icon feather icon-clock m-r-10"></i>30 min</span></p
+              <ul class="pro-body">
+                <li
+                  ><a href="javascript:" class="dropdown-item"><i class="feather icon-user"></i> Profile</a></li
+                  >
+                  <li
+                    ><a href="javascript:" class="dropdown-item"><i class="feather icon-mail"></i> My Messages</a></li
+                    >
+                    <li
+                      ><a href="javascript:" class="dropdown-item"><i class="feather icon-lock"></i> Lock Screen</a></li
+                      >
+                    </ul>
+                  </div>
+                </div>
+              </li>
+            </ul>
+
+            @if (visibleUserList && !this.gradientConfig.isRtlLayout) {
+              <section
+                class="header-user-list"
+                [ngClass]="{ open: visibleUserList }"
+                [@slideInOutLeft]
                 >
-                <p>currently login</p>
-              </div>
-            </div>
-          </li>
-        </ul>
-        <div class="noti-footer">
-          <a href="javascript:">show all</a>
-        </div>
-      </div>
-    </div>
-  </li>
-  <li (click)="this.visibleUserList = !this.visibleUserList">
-    <div class="dropdown">
-      <a href="javascript:" class="displayChatbox dropdown-toggle">
-        <i class="icon feather icon-mail" title="Mail InBox"></i><span class="badge bg-success"><span class="sr-only"></span></span>
-      </a>
-    </div>
-  </li>
-  <li>
-    <div class="dropdown drp-user" ngbDropdown placement="auto">
-      <a href="javascript:" ngbDropdownToggle>
-        <img src="assets/images/user/avatar-1.jpg" class="img-radius wid-40" alt="User-Profile-Image" />
-      </a>
-      <div class="dropdown-menu dropdown-menu-end profile-notification" ngbDropdownMenu>
-        <div class="pro-head">
-          <img src="assets/images/user/avatar-1.jpg" class="img-radius" alt="User-Profile-Image" />
-          <span>John Doe</span>
-          <a href="javascript:" class="dud-logout" title="Logout">
-            <i class="feather icon-log-out"></i>
-          </a>
-        </div>
-        <ul class="pro-body">
-          <li
-            ><a href="javascript:" class="dropdown-item"><i class="feather icon-user"></i> Profile</a></li
-          >
-          <li
-            ><a href="javascript:" class="dropdown-item"><i class="feather icon-mail"></i> My Messages</a></li
-          >
-          <li
-            ><a href="javascript:" class="dropdown-item"><i class="feather icon-lock"></i> Lock Screen</a></li
-          >
-        </ul>
-      </div>
-    </div>
-  </li>
-</ul>
+                <app-chat-user-list
+                  (ChatToggle)="onChatToggle($event)"
+                  (ChatCollapse)="this.visibleUserList = !this.visibleUserList; this.chatMessage = false"
+                ></app-chat-user-list>
+              </section>
+            }
 
-<section
-  class="header-user-list"
-  *ngIf="visibleUserList && !this.gradientConfig.isRtlLayout"
-  [ngClass]="{ open: visibleUserList }"
-  [@slideInOutLeft]
->
-  <app-chat-user-list
-    (ChatToggle)="onChatToggle($event)"
-    (ChatCollapse)="this.visibleUserList = !this.visibleUserList; this.chatMessage = false"
-  ></app-chat-user-list>
-</section>
+            @if (chatMessage && !this.gradientConfig.isRtlLayout) {
+              <section class="header-chat" [ngClass]="{ open: chatMessage }" [@slideInOutLeft]>
+                <app-chat-msg (ChatToggle)="this.chatMessage = !this.chatMessage" [friendId]="friendId"></app-chat-msg>
+              </section>
+            }
 
-<section class="header-chat" *ngIf="chatMessage && !this.gradientConfig.isRtlLayout" [ngClass]="{ open: chatMessage }" [@slideInOutLeft]>
-  <app-chat-msg (ChatToggle)="this.chatMessage = !this.chatMessage" [friendId]="friendId"></app-chat-msg>
-</section>
+            @if (visibleUserList && this.gradientConfig.isRtlLayout) {
+              <section
+                class="header-user-list"
+                [ngClass]="{ open: visibleUserList }"
+                [@slideInOutRight]
+                >
+                <app-chat-user-list
+                  (ChatToggle)="onChatToggle($event)"
+                  (ChatCollapse)="this.visibleUserList = !this.visibleUserList; this.chatMessage = false"
+                ></app-chat-user-list>
+              </section>
+            }
 
-<section
-  class="header-user-list"
-  *ngIf="visibleUserList && this.gradientConfig.isRtlLayout"
-  [ngClass]="{ open: visibleUserList }"
-  [@slideInOutRight]
->
-  <app-chat-user-list
-    (ChatToggle)="onChatToggle($event)"
-    (ChatCollapse)="this.visibleUserList = !this.visibleUserList; this.chatMessage = false"
-  ></app-chat-user-list>
-</section>
-
-<section class="header-chat" *ngIf="chatMessage && this.gradientConfig.isRtlLayout" [ngClass]="{ open: chatMessage }" [@slideInOutRight]>
-  <app-chat-msg (ChatToggle)="this.chatMessage = !this.chatMessage" [friendId]="friendId"></app-chat-msg>
-</section>
+            @if (chatMessage && this.gradientConfig.isRtlLayout) {
+              <section class="header-chat" [ngClass]="{ open: chatMessage }" [@slideInOutRight]>
+                <app-chat-msg (ChatToggle)="this.chatMessage = !this.chatMessage" [friendId]="friendId"></app-chat-msg>
+              </section>
+            }
