code improvement compete

--- a/angular/src/app/demo/authentication/sign-in/sign-in.component.html
+++ b/angular/src/app/demo/authentication/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
           <div class="card-body">
             <img src="assets/images/logo-dark.png" alt="logo" class="img-fluid mb-4" />
-            <h4 class="mb-3 f-w-400">Signin</h4>
+            <h4 class="mb-3 f-w-400">SignIn</h4>
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1"><i class="feather icon-mail"></i></span>
               <input type="email" class="form-control" placeholder="Email address" aria-label="Username" aria-describedby="basic-addon1" />
@@ -21,7 +21,7 @@
               </div>
             </div>
             <div class="d-grid">
-              <button class="btn btn-block btn-primary mb-4">Signin</button>
+              <button class="btn btn-block btn-primary mb-4">SignIn</button>
             </div>
             <p class="mb-2 text-muted">Forgot password? <a href="javascriprt:" class="f-w-400">Reset</a></p>
             <p class="mb-0 text-muted">Don’t have an account? <a [routerLink]="['/auth/signup']" class="f-w-400">Signup</a></p>
