--- a/angular/src/app/demo/ui-element/badge/badge.component.html
+++ b/angular/src/app/demo/ui-element/badge/badge.component.html
@@ -1,6 +1,6 @@
 <div class="row btn-page">
   <div class="col-sm-12">
-    <app-card cardTitle="Basic Badges" [options]="false">
+    <app-card cardTitle="Basic Badges" [options]="false" blockClass="pt-0">
       <h1>Example heading <span class="badge bg-secondary">New</span></h1>
       <h2>Example heading <span class="badge bg-secondary">New</span></h2>
       <h3>Example heading <span class="badge bg-secondary">New</span></h3>
@@ -10,7 +10,7 @@
     </app-card>
   </div>
   <div class="col-sm-12">
-    <app-card cardTitle="Button Badges" [options]="false">
+    <app-card cardTitle="Button Badges" [options]="false" blockClass="pt-0">
       <button type="button" class="btn btn-primary">primary <span class="badge bg-light text-dark">4</span></button>
       <button type="button" class="btn btn-secondary">secondary <span class="badge bg-light text-dark">4</span></button>
       <button type="button" class="btn btn-success">success <span class="badge bg-light text-dark">4</span></button>
@@ -20,7 +20,7 @@
     </app-card>
   </div>
   <div class="col-sm-12">
-    <app-card cardTitle="Contextual Variations" [options]="false">
+    <app-card cardTitle="Contextual Variations" [options]="false" blockClass="pt-0">
       <span class="badge m-r-5 bg-primary">Primary</span>
       <span class="badge m-r-5 bg-secondary">Secondary</span>
       <span class="badge m-r-5 bg-success">Success</span>
@@ -32,7 +32,7 @@
     </app-card>
   </div>
   <div class="col-sm-12">
-    <app-card cardTitle="Pill Badges" [options]="false">
+    <app-card cardTitle="Pill Badges" [options]="false" blockClass="pt-0">
       <span class="badge m-r-5 badge-pill bg-primary">Primary</span>
       <span class="badge m-r-5 badge-pill bg-secondary">Secondary</span>
       <span class="badge m-r-5 badge-pill bg-success">Success</span>
@@ -44,7 +44,7 @@
     </app-card>
   </div>
   <div class="col-sm-12">
-    <app-card cardTitle="Links" [options]="false">
+    <app-card cardTitle="Links" [options]="false" blockClass="pt-0">
       <a href="javascript:" class="badge m-r-5 bg-primary">Primary</a>
       <a href="javascript:" class="badge m-r-5 bg-secondary">Secondary</a>
       <a href="javascript:" class="badge m-r-5 bg-success">Success</a>
@@ -56,7 +56,7 @@
     </app-card>
   </div>
   <div class="col-sm-12">
-    <app-card cardTitle="Light variant" [options]="false">
+    <app-card cardTitle="Light variant" [options]="false" blockClass="pt-0">
       <span class="badge m-r-5 badge-light-primary">Primary</span>
       <span class="badge m-r-5 badge-light-secondary">Secondary</span>
       <span class="badge m-r-5 badge-light-success">Success</span>
