--- a/angular/src/app/demo/ui-element/breadcrumb/breadcrumb.component.html
+++ b/angular/src/app/demo/ui-element/breadcrumb/breadcrumb.component.html
@@ -158,9 +158,7 @@
       <div class="card-body">
         <nav aria-label="Page navigation example">
           <ul class="pagination">
-            <li class="page-item">
-              <a class="page-link" href="javascript:">Previous</a>
-            </li>
+            <li class="page-item"><a class="page-link" href="javascript:">Previous</a></li>
             <li class="page-item"><a class="page-link" href="javascript:">1</a></li>
             <li class="page-item"><a class="page-link" href="javascript:">2</a></li>
             <li class="page-item"><a class="page-link" href="javascript:">3</a></li>
