--- a/angular/src/app/demo/ui-element/typography/typography.component.html
+++ b/angular/src/app/demo/ui-element/typography/typography.component.html
@@ -130,12 +130,12 @@
     <app-card cardTitle="Blockquotes" [options]="false">
       <p class="text-muted m-b-30">Your awesome text goes here.</p>
       <blockquote class="blockquote">
-        <p class="mb-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. </p>
+        <p class="mb-2 pb-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. </p>
         <footer class="blockquote-footer"> Someone famous in <cite title="Source Title">Source Title</cite> </footer>
       </blockquote>
       <p class="text-muted m-b-15 m-t-20"> Add <code>.text-end</code> for a blockquote with right-aligned content. </p>
       <blockquote class="blockquote text-end">
-        <p class="mb-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. </p>
+        <p class="mb-2 pb-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. </p>
         <footer class="blockquote-footer"> Someone famous in <cite title="Source Title">Source Title</cite> </footer>
       </blockquote>
     </app-card>
