--- a/angular/src/app/theme/shared/components/breadcrumb/breadcrumb.component.html
+++ b/angular/src/app/theme/shared/components/breadcrumb/breadcrumb.component.html
@@ -20,19 +20,19 @@
                   @if (breadcrumb.url !== false) {
                     <li class="breadcrumb-item"
                       ><a [routerLink]="breadcrumb.url">{{ breadcrumb.title }}</a></li
-                      >
-                    }
-                    @if (breadcrumb.url === false) {
-                      <li class="breadcrumb-item"
-                        ><a href="javascript:">{{ breadcrumb.title }}</a></li
-                        >
-                      }
-                    }
-                  </ul>
-                </div>
-              </div>
+                    >
+                  }
+                  @if (breadcrumb.url === false && breadcrumb.type !== 'group') {
+                    <li class="breadcrumb-item"
+                      ><a href="javascript:">{{ breadcrumb.title }}</a></li
+                    >
+                  }
+                }
+              </ul>
             </div>
           </div>
-        }
-      }
+        </div>
+      </div>
     }
+  }
+}
