--- a/angular/src/scss/settings/_custom-variables.scss
+++ b/angular/src/scss/settings/_custom-variables.scss
@@ -850,6 +850,7 @@ $pagination-color: $link-color; // change
 $pagination-bg: $white;
 $pagination-border-width: $border-width;
 $pagination-border-color: $gray-300;
+$pagination-border-radius: null;
 
 $pagination-focus-box-shadow: $input-btn-focus-box-shadow;
 $pagination-focus-outline: 0;
