--- a/angular/src/app/demo/ui-element/collapse/collapse.component.html
+++ b/angular/src/app/demo/ui-element/collapse/collapse.component.html
@@ -2,14 +2,24 @@
   <!-- [ basic-collapse ] start -->
   <div class="col-sm-12">
     <app-card cardTitle="Basic Collapse" [options]="false">
-      <a class="btn btn-primary text-white me-2 mb-2" (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">Link with href</a>
-      <button class="btn btn-primary mb-2" type="button" (click)="isCollapsed = !isCollapsed"
-        [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">Button with data-target</button>
+      <a
+        class="btn btn-primary text-white me-2 mb-2"
+        (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed"
+        aria-controls="collapseExample"
+        >Link with href</a
+      >
+      <button
+        class="btn btn-primary mb-2"
+        type="button"
+        (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed"
+        aria-controls="collapseExample"
+        >Button with data-target</button
+      >
       <div id="collapseExample" [ngbCollapse]="isCollapsed">
         <p class="mt-3">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim
-          keffiyeh helvetica,
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica,
           craft beer labore wes anderson cred nesciunt sapiente ea proident.
         </p>
       </div>
@@ -20,15 +30,28 @@
   <div class="col-sm-12 mb-3">
     <h5 class="mb-3">Multiple Targets</h5>
     <hr />
-    <a class="btn btn-primary text-white me-2 mb-2" (click)="isMultiCollapsed1 = !isMultiCollapsed1"
-      [attr.aria-expanded]="!isMultiCollapsed1" aria-controls="multiCollapseExample1">Toggle first element</a>
-    <button class="btn btn-primary me-2 mb-2" (click)="isMultiCollapsed2 = !isMultiCollapsed2"
-      [attr.aria-expanded]="!isMultiCollapsed2" type="button" aria-controls="multiCollapseExample2">
+    <a
+      class="btn btn-primary text-white me-2 mb-2"
+      (click)="isMultiCollapsed1 = !isMultiCollapsed1"
+      [attr.aria-expanded]="!isMultiCollapsed1"
+      aria-controls="multiCollapseExample1"
+      >Toggle first element</a
+    >
+    <button
+      class="btn btn-primary me-2 mb-2"
+      (click)="isMultiCollapsed2 = !isMultiCollapsed2"
+      [attr.aria-expanded]="!isMultiCollapsed2"
+      type="button"
+      aria-controls="multiCollapseExample2"
+    >
       Toggle second element
     </button>
-    <button class="btn btn-primary mb-2" type="button"
+    <button
+      class="btn btn-primary mb-2"
+      type="button"
       (click)="isMultiCollapsed1 = !isMultiCollapsed1; isMultiCollapsed2 = !isMultiCollapsed2"
-      aria-controls="multiCollapseExample1 multiCollapseExample2">
+      aria-controls="multiCollapseExample1 multiCollapseExample2"
+    >
       Toggle both elements
     </button>
     <div class="row">
@@ -37,8 +60,7 @@
           <div class="card">
             <div class="card-body">
               <p class="mb-0">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil
-                anim keffiyeh
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh
                 helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
               </p>
             </div>
@@ -50,8 +72,7 @@
           <div class="card">
             <div class="card-body">
               <p class="mb-0">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil
-                anim keffiyeh
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh
                 helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
               </p>
             </div>
@@ -72,17 +93,11 @@
           <div ngbAccordionCollapse>
             <div ngbAccordionBody>
               <ng-template>
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                moon
-                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
-                3 wolf
-                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-                Nihil anim
-                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
-                excepteur
-                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
-                probably
-                haven't heard of them accusamus labore sustainable VHS.
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua
+                put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore
+                wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
               </ng-template>
             </div>
           </div>
@@ -96,17 +111,11 @@
           <div ngbAccordionCollapse>
             <div ngbAccordionBody>
               <ng-template>
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                moon
-                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
-                3 wolf
-                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-                Nihil anim
-                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
-                excepteur
-                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
-                probably
-                haven't heard of them accusamus labore sustainable VHS.
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua
+                put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore
+                wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
               </ng-template>
             </div>
           </div>
@@ -118,17 +127,11 @@
           <div ngbAccordionCollapse>
             <div ngbAccordionBody>
               <ng-template>
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                moon
-                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
-                3 wolf
-                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
-                Nihil anim
-                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
-                excepteur
-                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
-                probably
-                haven't heard of them accusamus labore sustainable VHS.
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua
+                put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore
+                wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+                farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
               </ng-template>
             </div>
           </div>
@@ -142,28 +145,23 @@
       <div class="card-body">
         <div ngbAccordion [closeOthers]="true">
           @for (item of items; track item) {
-          <div ngbAccordionItem [collapsed]="item !== 'First'">
-            <h2 ngbAccordionHeader>
-              <button ngbAccordionButton>{{ item }}</button>
-            </h2>
-            <div ngbAccordionCollapse>
-              <div ngbAccordionBody>
-                <ng-template>
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-                  moon
-                  officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-                  Brunch 3
-                  wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch
-                  et.
-                  Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad
-                  vegan
-                  excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth
-                  nesciunt
-                  you probably haven't heard of them accusamus labore sustainable VHS.
-                </ng-template>
+            <div ngbAccordionItem [collapsed]="item !== 'First'">
+              <h2 ngbAccordionHeader>
+                <button ngbAccordionButton>{{ item }}</button>
+              </h2>
+              <div ngbAccordionCollapse>
+                <div ngbAccordionBody>
+                  <ng-template>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
+                    aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
+                    aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
+                    beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
+                    craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                    sustainable VHS.
+                  </ng-template>
+                </div>
               </div>
             </div>
-          </div>
           }
         </div>
       </div>
