--- a/angular/src/scss/themes/minixs/_button.scss
+++ b/angular/src/scss/themes/minixs/_button.scss
@@ -83,3 +83,14 @@
     box-shadow: none;
   }
 }
+
+.btn {
+  &.custom-border {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+  }
+  &.vertical-custom {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+  }
+}
