--- a/angular/src/scss/themes/layouts/_menu-ng.scss
+++ b/angular/src/scss/themes/layouts/_menu-ng.scss
@@ -324,7 +324,7 @@ app-nav-group {
     min-height: 100vh;
 
     .pcoded-inner-navbar {
-      margin-bottom: $header-height;
+      margin-bottom: 40px;
     }
   }
 }
