--- a/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -13,12 +13,14 @@
         }
       }
     </ul>
-    <app-card [hidHeader]="true" cardClass="text-center">
-      <i class="feather icon-sunset f-40"></i>
-      <h6 class="mt-3">Help?</h6>
-      <p>Please contact us on our email for need any support</p>
-      <a href="javascript:" target="_blank" class="btn btn-primary btn-sm text-white m-0">Support</a>
-    </app-card>
+    <div class="card text-center">
+      <div class="card-body">
+        <img src="assets/images/sidebar.png" alt="images" class="img-fluid mb-2" />
+        <h5>Gradient Pro</h5>
+        <p>Checkout Gradient Premium Features</p>
+        <a href="https://codedthemes.com/item/gradient-able-angular-admin-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium" target="_blank" class="btn text-white btn-primary">Download Premium</a>
+      </div>
+    </div>
     <div class="version">
       <label disabled class="pe-auto">v{{ currentApplicationVersion }}</label>
     </div>
