--- a/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
+++ b/angular/src/app/theme/layout/admin/navigation/nav-content/nav-content.component.html
@@ -18,7 +18,12 @@
         <img src="assets/images/sidebar.png" alt="images" class="img-fluid mb-2" />
         <h5>Gradient Pro</h5>
         <p>Checkout Gradient Premium Features</p>
-        <a href="https://codedthemes.com/item/gradient-able-angular-admin-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium" target="_blank" class="btn text-white btn-primary">Download Premium</a>
+        <a
+          href="https://codedthemes.com/item/gradient-able-angular-admin-template/?utm_source=free_demo&utm_medium=codedthemes&utm_campaign=button_download_premium"
+          target="_blank"
+          class="btn text-white btn-primary"
+          >Download Premium</a
+        >
       </div>
     </div>
     <div class="version">
